# madr

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 45c3dfd137c7_initial_schema.py
app/: main.py
app/core/: auth.py  config.py  database.py  jwt.py  security.py
app/models/: base.py  book.py  romancist.py  user.py
app/routers/: auth.py  book.py  health.py  romancist.py  user.py
app/schemas/: book.py  romancist.py  token.py  user.py
app/utils/: sanitize.py
madr-frontend/: index.html  package-lock.json  package.json
madr-frontend/src/: App.jsx
madr-frontend/src/services/: api.js
tests/: conftest.py  test_auth.py  test_books.py  test_romancists.py  test_users.py
